Bug email don't show white spaces fixed

--- a/src/Components/MailCard/MailCard.css
+++ b/src/Components/MailCard/MailCard.css
@@ -48,6 +48,7 @@
 .message {
     color: var(--gray-color);
     font-size: 0.8em;
+    white-space: pre-wrap;
 }
 
 .email-footer {
